engines/ep/src/folly_executorpool.h
@@ -186,6 +186,10 @@ private:
     /// the task is dead (or should run again).
     void rescheduleTaskAfterRun(std::shared_ptr<TaskProxy> proxy);
 
+    /// Remove the given taskProxy from the tracked tasks.
+    /// Should only be called at the end of scheduleViaCPUPool.
+    void removeTaskAfterRun(TaskProxy& proxy);
+
     struct State;
     /**
      * FollyExecutorPool internal state. unique_ptr for pimpl.
